Enlaces de Imagenes Añadidos

--- a/Practicas/Evidencias/Evidencia 4/E4 Index.html
+++ b/Practicas/Evidencias/Evidencia 4/E4 Index.html
@@ -6,9 +6,9 @@
     <title>Bootstrap demo</title>
     <!-- CSS de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
+    <link href="Practicas\Evidencias\Evidencia 4\estilos.css" rel="stylesheet">
+</head>
   <body>
-    <h1>Hello, world!</h1>
     <!-- JS de Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
@@ -24,32 +24,32 @@
     <div class="row">
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\De Todas Las Flores.jpeg" 
+            <img src="https://i.scdn.co/image/ab67616d0000b273f6a332eb170465ae36a7ec9a" 
             alt="De todas Las Flores - Natalia Lafourcade">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\Almendra.jpg" 
+            <img src="https://http2.mlstatic.com/D_NQ_NP_806136-MLU75210775244_032024-O.webp" 
             alt="Almendra - Almendra">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\Either Or.jpeg" 
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fd/Elliottsmitheitheror55.jpg/220px-Elliottsmitheitheror55.jpg" 
             alt="Either/Or - Elliott Smith">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\submarine.jpeg" 
+            <img src="https://i.scdn.co/image/ab67616d0000b2734d070fdf58fad8c54c5beb85" 
             alt="Submarine - The Marías">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\Titanic Rising.jpg" 
+            <img src="https://media.pitchfork.com/photos/5c7eafd9b8753a13dd400085/master/pass/WeyesBlood_TitanicRising.jpg" 
             alt="Titanic Rising - Weyes Blood">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="Imagenes\Voyager.jpeg" 
+            <img src="https://i.ytimg.com/vi/rAbZdOvisb8/maxresdefault.jpg" 
             alt="Voyager - Moonchild">
         </div>
 
