CSS añadido propiamente (direccion previamente incorrecta)

--- a/Practicas/Evidencias/Evidencia 4/E4 Index.html
+++ b/Practicas/Evidencias/Evidencia 4/E4 Index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
     <!-- CSS de Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="Practicas\Evidencias\Evidencia 4\estilos.css" rel="stylesheet">
+    <link href="estilos.css" rel="stylesheet">
+    <title>Evidencia 4</title>
 </head>
+
   <body>
     <!-- JS de Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
   
-<section id="Galeria">
+<section id="galeria">
 
     <div class="text-center pt-5">
 
@@ -34,7 +36,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fd/Elliottsmitheitheror55.jpg/220px-Elliottsmitheitheror55.jpg" 
+            <img src="https://m.media-amazon.com/images/I/81D05gX9jvL._UF1000,1000_QL80_.jpg" 
             alt="Either/Or - Elliott Smith">
         </div>
 
@@ -49,7 +51,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://i.ytimg.com/vi/rAbZdOvisb8/maxresdefault.jpg" 
+            <img src="https://i.scdn.co/image/ab67616d0000b273a2df9a029e51cfa5b753201f" 
             alt="Voyager - Moonchild">
         </div>
 
