Imagenes seleccionadas apropiadamente

--- a/Practicas/Evidencias/Evidencia 4/E4 Index.html
+++ b/Practicas/Evidencias/Evidencia 4/E4 Index.html
@@ -26,32 +26,32 @@
     <div class="row">
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://i.scdn.co/image/ab67616d0000b273f6a332eb170465ae36a7ec9a" 
+            <img src="../../../Imagenes/Ev4/De Todas Las Flores.jpeg" 
             alt="De todas Las Flores - Natalia Lafourcade">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_806136-MLU75210775244_032024-O.webp" 
+            <img src="../../../Imagenes/Ev4/Almendra.jpg" 
             alt="Almendra - Almendra">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://m.media-amazon.com/images/I/81D05gX9jvL._UF1000,1000_QL80_.jpg" 
+            <img src="../../../Imagenes/Ev4/Either Or.jpeg" 
             alt="Either/Or - Elliott Smith">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://i.scdn.co/image/ab67616d0000b2734d070fdf58fad8c54c5beb85" 
+            <img src="../../../Imagenes/Ev4/submarine.jpeg" 
             alt="Submarine - The Marías">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://media.pitchfork.com/photos/5c7eafd9b8753a13dd400085/master/pass/WeyesBlood_TitanicRising.jpg" 
+            <img src="../../../Imagenes/Ev4/Titanic Rising.jpg" 
             alt="Titanic Rising - Weyes Blood">
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="https://i.scdn.co/image/ab67616d0000b273a2df9a029e51cfa5b753201f" 
+            <img src="../../../Imagenes/Ev4/Voyager.jpeg" 
             alt="Voyager - Moonchild">
         </div>
 
